refactoring in progress

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -228,7 +228,7 @@
   margin-right: 0.5rem;
 }
 
-// slim modifier for placing buttons within tables
+// slim modifier for placing smaller buttons
 .button.-slim {
-  padding: 0.25rem 1rem;
+  padding: 0.2rem 0.8rem;
 }
