--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -980,6 +980,10 @@ nav {
   text-align: center;
 }
 
+.hooks.table .headers {
+  padding-left: 4.25rem;
+}
+
 .hook-status {
   fill: none;
 }
@@ -998,7 +1002,8 @@ nav {
   justify-content: center;
 
   font-weight: 300;
-
+  width: 300px;
+  word-wrap: break-word;
   text-align: center;
 }
 
@@ -1339,22 +1344,24 @@ nav {
 .-m-l {
   margin-left: 0.25rem;
 }
+
 .secrets-table .headers {
   padding-left: 1rem;
   position: relative;
 }
+
 .secrets-first-cell {
   padding: 0.5rem 1rem;
   padding-bottom: 0;
   color: var(--color-primary);
   font-size: 1.2rem;
 }
-.add-secret {
+.manage-secrets {
   padding: 1rem;
   background: var(--color-bg-dark);
 }
 
-.add-secret .header {
+.manage-secrets .header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -1363,7 +1370,7 @@ nav {
   border-bottom: 2px solid var(--color-secondary);
 }
 
-.add-secret h2 {
+.manage-secrets h2 {
   margin: 0;
   border-bottom: 2px solid var(--color-secondary);
 }
@@ -1374,7 +1381,7 @@ nav {
 
 .secret-form section {
   justify-content: flex-start;
-  margin-bottom: 1.75rem;
+  margin-bottom: 1rem;
 }
 
 .images {
@@ -1385,25 +1392,36 @@ nav {
 .added-image {
   margin: 0.2rem 1rem;
   display: flex;
-  // display: inline-block;
   padding: 0.3rem 1rem;
   width: 25rem;
-  // flex-grow: 0;
-  // justify-content: space-between;
   align-items: center;
-  // width: auto;
-  // width: 0;
-  > * {
-    margin-right: 1rem;
-  }
-  .name {
-    flex: 1;
-    word-wrap: break-word;
-    min-width: 40%;
-    font-family: var(--font-code);
-    font-size: 0.9rem;
-  }
   background: var(--color-bg);
+  position: relative;
+}
+
+.added-image .name {
+  flex: 1;
+  word-wrap: break-word;
+  min-width: 40%;
+  font-family: var(--font-code);
+  font-size: 0.9rem;
+}
+
+.added-image .button.-hide {
+  visibility: hidden;
+}
+
+.added-image.chevron {
+  margin-left: 2rem;
+}
+
+.added-image.chevron:before {
+  content: "";
+  border-style: solid;
+  border-width: 0.1rem 1rem 0.1rem 0.2rem;
+  border-color: var(--color-primary);
+  position: absolute;
+  left: -1.5rem;
 }
 .add {
   color: green;
@@ -1429,13 +1447,13 @@ h4.-m-t {
 .no-secrets {
   padding: 1rem;
 }
-.add-secret .subheader {
+.manage-secrets .subheader {
   margin-top: 1rem;
   border-bottom: 2px solid var(--color-primary);
   width: 80%;
 }
-.add-secret input,
-.add-secret textarea,
+.manage-secrets input,
+.manage-secrets textarea,
 .update-secret textarea {
   width: 70%;
   border: 1px solid gray;
@@ -1448,18 +1466,18 @@ h4.-m-t {
   padding: 0.5rem;
 }
 
-.add-secret input {
+.manage-secrets input {
   width: 25%;
 }
 
-.add-secret textarea {
+.manage-secrets textarea {
   width: 70%;
 }
 .update-secret textarea {
   width: 70%;
 }
 
-.add-secret .-m-t {
+.manage-secrets .-m-t {
   margin-top: 1rem;
 }
 
@@ -1481,6 +1499,7 @@ h4.-m-t {
 }
 
 .field-header {
+  margin-top: 1rem;
   margin-bottom: 0.25rem;
 }
 
