implemented generic table, removed all secrets references

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1345,7 +1345,7 @@ nav {
   margin-left: 0.25rem;
 }
 
-.secrets-table .headers {
+.table .headers {
   padding-left: 1rem;
   position: relative;
 }
@@ -1490,7 +1490,7 @@ h4.-m-t {
   font-size: 12px;
 }
 
-.no-secrets {
+.no-rows {
   padding: 1rem;
 }
 .manage-secrets .subheader {
