--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1536,8 +1536,14 @@ h4.-m-t {
   font-size: 1.25rem;
   color: var(--color-primary);
   padding: 0.6rem 0rem 0rem 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
+.table-label .add-secret {
+  margin-right: 1em;
+}
 .field-description {
   font-size: 1rem;
   font-weight: 300;
