--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -958,6 +958,7 @@ nav {
   display: flex;
   flex-direction: row;
   align-items: center;
+  // border-bottom: 1px solid var(--color-primary);
 }
 
 .table .headers {
@@ -979,9 +980,7 @@ nav {
 
   text-align: center;
 }
-.column-width {
-  max-width: 300px;
-}
+
 .hooks.table .headers {
   padding-left: 4.25rem;
 }
@@ -997,13 +996,16 @@ nav {
 .hook-status.-failure {
   stroke: var(--color-red);
 }
-
+.table .row-container {
+  // border-bottom: 1px solid var(--color-text);
+}
 .table .row .cell {
   flex: 1;
   align-items: center;
   justify-content: center;
 
   font-weight: 300;
+  width: 300px;
   word-wrap: break-word;
   text-align: center;
 }
