--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -41,11 +41,7 @@ header {
 
   padding: 1em var(--horizontal-pad);
 
-  background: radial-gradient(
-    circle at 50% -200%,
-    var(--color-bg-light) -7%,
-    transparent 50%
-  );
+  background: radial-gradient(circle at 50% -200%, var(--color-bg-light) -7%, transparent 50%);
 
   border-top-width: 0;
   border-bottom: var(--line-width) solid;
@@ -147,7 +143,7 @@ header {
       border-radius: 0 0 0 0.25em;
       transform: rotate(135deg);
 
-      content: '';
+      content: "";
 
       clip-path: polygon(0% 0%, 100% 100%, 0% 100%);
     }
@@ -235,7 +231,7 @@ nav {
   /* ellipsis character */
   animation: ellipsis steps(4, end) 900ms infinite;
 
-  content: '\2026';
+  content: "\2026";
 }
 
 .util {
@@ -260,13 +256,13 @@ nav {
   &::before {
     margin-right: 0.3em;
 
-    content: '[';
+    content: "[";
   }
 
   &::after {
     margin-left: 0.3em;
 
-    content: ']';
+    content: "]";
   }
 }
 
@@ -489,13 +485,11 @@ nav {
 }
 
 .build-animation.-bottom.-running {
-  animation: build-status-parallax-running 26s linear 26s infinite,
-    build-status-parallax-start 26s linear none;
+  animation: build-status-parallax-running 26s linear 26s infinite, build-status-parallax-start 26s linear none;
 }
 
 .build-animation.-top.-running {
-  animation: build-status-parallax-running 22s linear 22s infinite,
-    build-status-parallax-start 22s linear none;
+  animation: build-status-parallax-running 22s linear 22s infinite, build-status-parallax-start 22s linear none;
 }
 
 .build-animation.-bottom.-start {
@@ -663,7 +657,7 @@ nav {
 
   border-width: 5px;
 
-  content: ' ';
+  content: " ";
 }
 
 .recent-build-tooltip .line {
@@ -676,7 +670,7 @@ nav {
   margin-right: 0.5em;
 
   &:before {
-    content: '#';
+    content: "#";
   }
 }
 
@@ -943,7 +937,7 @@ nav {
   border: 1px solid var(--color-red);
 }
 
-.hooks {
+.table {
   width: 100%;
   margin: 1rem 0;
   padding-bottom: 0.5rem;
@@ -953,36 +947,42 @@ nav {
   background: var(--color-bg-dark);
 }
 
-.hooks .loading {
+.table .loading {
   display: flex;
 
   margin-top: 0.5em;
   margin-left: 0.4em;
 }
 
-.hooks .row.preview {
+.table .row.preview {
   display: flex;
   flex-direction: row;
   align-items: center;
+  // border-bottom: 1px solid var(--color-primary);
 }
 
-.hooks .headers {
+.table .headers {
   display: flex;
   flex-direction: row;
   align-items: center;
 
   margin-top: 0.3em;
   padding: 0.3em 1rem;
+  padding-left: 2rem;
 
   border-bottom: 1px solid var(--color-bg-light);
 }
 
-.hooks .header {
+.table .header {
   flex: 1;
 
   font-size: 1.2rem;
 
   text-align: center;
+}
+
+.hooks.table .headers {
+  padding-left: 4.25rem;
 }
 
 .hook-status {
@@ -997,35 +997,60 @@ nav {
   stroke: var(--color-red);
 }
 
-.hooks .row .cell {
+.table .row .cell {
   flex: 1;
   align-items: center;
   justify-content: center;
 
   font-weight: 300;
-
+  width: 300px;
+  word-wrap: break-word;
   text-align: center;
 }
 
-.hooks .source-id {
+.table .headers .header.-last {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 1rem;
+}
+
+.table .row .cell.-last {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 1rem;
+  button {
+    margin: 0.25rem 0;
+  }
+}
+
+.table .source-id {
   min-width: 330px;
 }
 
-.hooks .first-cell {
-  width: 44px;
+.table .headers .first-cell {
+  width: 2rem;
 }
 
-.hooks .headers .first-cell {
-  width: calc(2rem + 44px);
+.secret {
+  margin: 1rem;
 }
 
-.hooks .cell.source-id {
+.filler-cell {
+  width: 6ch;
+}
+
+.table .headers .-label {
+  font-size: 1.5rem;
+  color: var(--color-primary);
+}
+
+.table .cell.source-id {
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
 
-.hooks .text {
+.table .text {
   flex: 1;
   padding: 3px 12px;
 
@@ -1034,7 +1059,7 @@ nav {
   background: var(--color-bg);
 }
 
-.hooks .details {
+.table .details {
   margin: 1rem;
 }
 
@@ -1046,7 +1071,7 @@ nav {
   color: var(--color-red-light);
 }
 
-.hooks .info {
+.table .info {
   display: flex;
   display: inline-block;
   flex-direction: row;
@@ -1060,50 +1085,50 @@ nav {
   border-left: 2px solid var(--color-bg-light);
 }
 
-.hooks .info:last-child {
+.table .info:last-child {
   border-bottom: none;
 }
 
-.hooks .info.-pending {
+.table .info.-pending {
   border-left-color: var(--color-bg-light);
 }
 
-.hooks .info.-running {
+.table .info.-running {
   border-left-color: var(--color-yellow);
 }
 
-.hooks .info.-success {
+.table .info.-success {
   border-left-color: var(--color-green);
 }
 
-.hooks .info.-failure,
-.hooks .info.-error {
+.table .info.-failure,
+.table .info.-error {
   border-left-color: var(--color-red);
 }
 
-.hooks .element span.-m-r,
+.table .element span.-m-r,
 .hook-build .-m-r {
   margin-right: 0.4em;
 }
 
-.hooks .error-label {
+.table .error-label {
   color: var(--color-red-light);
 }
 
-.hooks .hook-build-status.-pending {
+.table .hook-build-status.-pending {
   color: var(--color-offwhite);
 }
 
-.hooks .hook-build-status.-running {
+.table .hook-build-status.-running {
   color: var(--color-yellow);
 }
 
-.hooks .hook-build-status.-success {
+.table .hook-build-status.-success {
   color: var(--color-green);
 }
 
-.hooks .hook-build-status.-failure,
-.hooks .hook-build-status.-error {
+.table .hook-build-status.-failure,
+.table .hook-build-status.-error {
   color: var(--color-red-light);
 }
 
@@ -1203,7 +1228,7 @@ nav {
   &::after {
     display: block;
     position: absolute;
-    content: '';
+    content: "";
     top: -0.5rem;
     right: 0;
     border-color: transparent;
@@ -1311,6 +1336,228 @@ nav {
       margin: 0.5rem 1rem;
     }
   }
+}
+
+.-m-r {
+  margin-right: 0.25rem;
+}
+
+.-m-l {
+  margin-left: 0.25rem;
+}
+
+.table .headers {
+  padding-left: 1rem;
+  position: relative;
+}
+
+.secrets-first-cell {
+  padding: 0.5rem 1rem;
+  padding-bottom: 0;
+  color: var(--color-primary);
+  font-size: 1.2rem;
+}
+.manage-secrets {
+  padding: 1rem;
+  background: var(--color-bg-dark);
+}
+
+.manage-secrets .header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 0;
+  border-bottom: 2px solid var(--color-secondary);
+}
+
+.manage-secrets h2 {
+  margin: 0;
+  border-bottom: 2px solid var(--color-secondary);
+}
+
+.secret-form {
+  margin-bottom: 0.5rem;
+}
+
+.secret-form section {
+  justify-content: flex-start;
+  margin-bottom: 1rem;
+}
+
+.images {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.added-image {
+  margin: 0.2rem 1rem;
+  display: flex;
+  padding: 0.3rem 1rem;
+  width: 25rem;
+  align-items: center;
+  background: var(--color-bg);
+  position: relative;
+}
+
+.added-image .name {
+  flex: 1;
+  word-wrap: break-word;
+  min-width: 40%;
+  font-family: var(--font-code);
+  font-size: 0.9rem;
+}
+
+.added-image .button.-hide {
+  visibility: hidden;
+}
+
+.added-image.chevron {
+  margin-left: 2rem;
+}
+
+.added-image.chevron:before {
+  content: "";
+  border-style: solid;
+  border-width: 0.1rem 1rem 0.1rem 0.2rem;
+  border-color: var(--color-primary);
+  position: absolute;
+  left: -1.5rem;
+}
+.add {
+  color: green;
+}
+.trash {
+  color: red;
+}
+h4.-no-pad {
+  margin: 0;
+}
+h4.-m-t {
+  margin-top: 1rem;
+}
+.select-secret {
+  background: var(--color-bg);
+  color: var(--color-primary);
+  font-size: 1rem;
+  border-radius: 0px;
+  > * {
+    border-radius: 0px;
+  }
+}
+.select-secret .menu {
+  position: absolute;
+  left: 5px;
+  margin-top: 5px;
+  background: white;
+  color: black;
+  border: 1px solid #ddd;
+  border-radius: 3px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  min-width: 120px;
+  z-index: 11110;
+}
+
+.selected-item {
+  background: #3366ff;
+  color: white;
+  display: block;
+  padding: 5px 10px;
+  border-bottom: 1px solid #ddd;
+  cursor: pointer;
+}
+
+.select-secret .list {
+  list-style: none;
+  padding: 0;
+  margin: auto;
+  max-height: 200px;
+  overflow-y: auto;
+}
+
+.select-secret .item {
+  display: block;
+  padding: 5px 10px;
+  border-bottom: 1px solid #ddd;
+  cursor: pointer;
+}
+
+.select-secret .input {
+  min-width: 120px;
+  color: black;
+  position: relative;
+  display: block;
+  padding: 0.8em;
+  font-size: 12px;
+}
+
+.no-rows {
+  padding: 1rem;
+}
+.manage-secrets .subheader {
+  margin-top: 1rem;
+  border-bottom: 2px solid var(--color-primary);
+  width: 80%;
+}
+.manage-secrets input,
+.manage-secrets textarea,
+.update-secret textarea {
+  width: 70%;
+  border: 1px solid gray;
+  box-shadow: none;
+  background: var(--color-bg);
+  color: var(--color-text);
+  font-size: 1rem;
+  font-weight: 300;
+  margin-bottom: 0.5rem;
+  padding: 0.5rem;
+}
+
+.manage-secrets input {
+  width: 25%;
+}
+
+.manage-secrets textarea {
+  width: 70%;
+}
+.update-secret textarea {
+  width: 70%;
+}
+
+.manage-secrets .-m-t {
+  margin-top: 1rem;
+}
+
+.update-secret {
+  padding-bottom: 0.5rem;
+  border-bottom: 1px solid gray;
+}
+
+.table-label {
+  font-size: 1.25rem;
+  color: var(--color-primary);
+  padding: 0.6rem 0rem 0rem 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.table-label .add-secret {
+  margin-right: 1em;
+}
+.field-description {
+  font-size: 1rem;
+  font-weight: 300;
+  margin-left: 1rem;
+}
+
+.field-header {
+  margin-top: 1rem;
+  margin-bottom: 0.25rem;
+}
+
+.-code {
+  font-family: var(--font-code);
 }
 
 // visually hide, but keep accessible by screen readers
