--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1014,10 +1014,11 @@ nav {
   padding-right: 1rem;
 }
 
-.table .row .cell.-last {
+.table .cell.-last {
   display: flex;
   justify-content: flex-end;
   padding-right: 1rem;
+
   button {
     margin: 0.25rem 0;
   }
@@ -1341,7 +1342,7 @@ nav {
 .table-label {
   font-size: 1.25rem;
   color: var(--color-primary);
-  padding: 0.6rem 0rem 0rem 1rem;
+  padding-top: 0.6rem 0 0 1rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
