removing unused css

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -41,11 +41,7 @@ header {
 
   padding: 1em var(--horizontal-pad);
 
-  background: radial-gradient(
-    circle at 50% -200%,
-    var(--color-bg-light) -7%,
-    transparent 50%
-  );
+  background: radial-gradient(circle at 50% -200%, var(--color-bg-light) -7%, transparent 50%);
 
   border-top-width: 0;
   border-bottom: var(--line-width) solid;
@@ -147,7 +143,7 @@ header {
       border-radius: 0 0 0 0.25em;
       transform: rotate(135deg);
 
-      content: '';
+      content: "";
 
       clip-path: polygon(0% 0%, 100% 100%, 0% 100%);
     }
@@ -235,7 +231,7 @@ nav {
   /* ellipsis character */
   animation: ellipsis steps(4, end) 900ms infinite;
 
-  content: '\2026';
+  content: "\2026";
 }
 
 .util {
@@ -260,13 +256,13 @@ nav {
   &::before {
     margin-right: 0.3em;
 
-    content: '[';
+    content: "[";
   }
 
   &::after {
     margin-left: 0.3em;
 
-    content: ']';
+    content: "]";
   }
 }
 
@@ -489,13 +485,11 @@ nav {
 }
 
 .build-animation.-bottom.-running {
-  animation: build-status-parallax-running 26s linear 26s infinite,
-    build-status-parallax-start 26s linear none;
+  animation: build-status-parallax-running 26s linear 26s infinite, build-status-parallax-start 26s linear none;
 }
 
 .build-animation.-top.-running {
-  animation: build-status-parallax-running 22s linear 22s infinite,
-    build-status-parallax-start 22s linear none;
+  animation: build-status-parallax-running 22s linear 22s infinite, build-status-parallax-start 22s linear none;
 }
 
 .build-animation.-bottom.-start {
@@ -663,7 +657,7 @@ nav {
 
   border-width: 5px;
 
-  content: ' ';
+  content: " ";
 }
 
 .recent-build-tooltip .line {
@@ -676,7 +670,7 @@ nav {
   margin-right: 0.5em;
 
   &:before {
-    content: '#';
+    content: "#";
   }
 }
 
@@ -951,6 +945,15 @@ nav {
   font-size: 1rem;
 
   background: var(--color-bg-dark);
+}
+
+.table-label {
+  font-size: 1.25rem;
+  color: var(--color-primary);
+  padding-top: 0.6rem 0 0 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .table .loading {
@@ -1235,7 +1238,7 @@ nav {
   &::after {
     display: block;
     position: absolute;
-    content: '';
+    content: "";
     top: -0.5rem;
     right: 0;
     border-color: transparent;
@@ -1343,34 +1346,6 @@ nav {
       margin: 0.5rem 1rem;
     }
   }
-}
-
-.table-label {
-  font-size: 1.25rem;
-  color: var(--color-primary);
-  padding-top: 0.6rem 0 0 1rem;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.table-label .add-secret {
-  margin-right: 1em;
-}
-
-.field-description {
-  font-size: 1rem;
-  font-weight: 300;
-  margin-left: 1rem;
-}
-
-.field-header {
-  margin-top: 1rem;
-  margin-bottom: 0.25rem;
-}
-
-.-code {
-  font-family: var(--font-code);
 }
 
 // visually hide, but keep accessible by screen readers
